<resources>
    <string name="app_name">MoveRight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">You are not logged in</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loginin">Log in</string>
    <string name="signup">Sign up</string>
    <string name="forget">Forget Password?</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="name">Name</string>


    <string name="sharedpreferences_filename">shared</string>
    <string name="jwt"></string>
    <string name="userId">userId</string>
    <string name="username">username</string>
    <string name="userEmail">userEmail</string>
    <string name="pict">userPicture</string>
    <string name="role">role</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_select_map">Map</string>
</resources>
